syntax = "proto3";

option csharp_namespace = "OddbitAi.Models";

message ProcessRequest {
    bytes data = 1;
};

message ProcessReply {
    string reply = 1;
}

service ModelService {
    rpc Process (ProcessRequest) returns (ProcessReply);
}